[gd_scene load_steps=5 format=2]

[ext_resource path="res://crafting_menu/Board.gd" type="Script" id=1]
[ext_resource path="res://crafting_menu/PieceDrawer.gd" type="Script" id=2]
[ext_resource path="res://crafting_menu/SquareSelector.gd" type="Script" id=3]
[ext_resource path="res://crafting_menu/HighlightTiles.gd" type="Script" id=4]

[node name="Board" type="Control"]
script = ExtResource( 1 )

[node name="SquareSelector" type="GridContainer" parent="."]
margin_right = 512.0
margin_bottom = 512.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
script = ExtResource( 3 )

[node name="HighlightTiles" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
script = ExtResource( 4 )

[node name="PieceDrawer" type="Container" parent="."]
mouse_filter = 2
script = ExtResource( 2 )
